# severinov_a_a

prj.labs/lab01/: CMakeLists.txt  lab01.cpp  lab01.report.md.in.txt
prj.labs/lab02/: CMakeLists.txt  lab02.cpp  lab02.report.md.in.txt
